--- a/style.css
+++ b/style.css
@@ -1,61 +1,171 @@
-
-
-
-
-
- /*  SECTIONS  */
-.section {
-	clear: both;
-	padding: 0px;
-	margin: 0px;
+body
+{
+background: black;
+font-family:arial;
+color: white;
+margin:0px;
 }
 
-/*  COLUMN SETUP  */
-.col {
-	display: block;
-	float:left;
-	margin: 1% 0 1% 1.6%;
-}
-.col:first-child { margin-left: 0; }
-
-
-/*  GROUPING  */
-.group:before,
-.group:after {
-	content:"";
-	display:table;
-}
-.group:after {
-	clear:both;
+.container1
+{
+min-height:75px;
 }
 
-/*  GRID OF THREE  */
-.span_3_of_3 {
-	width: 100%;
-}
-.span_2_of_3 {
-	width: 66.1%;
-}
-.span_1_of_3 {
-	width: 32.2%;
+.container2
+{
+min-height:75px;
 }
 
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+.container3
+{
+min-height:75px;
 
-@media only screen and (max-width: 480px) {
-	.col { 
-		margin: 1% 0 1% 0%;
-	}
 }
 
-@media only screen and (max-width: 480px) {
-	.span_3_of_3 {
-		width: 100%; 
-	}
-	.span_2_of_3 {
-		width: 100%; 
-	}
-	.span_1_of_3 {
-		width: 100%;
-	}
+.container4
+{
+
+}
+
+.container5
+{
+padding-top:15px;
+min-height:75px;
+
+}
+
+.container5a
+{
+padding-top:15px;
+min-height:75px;
+
+}
+
+.container6
+{
+min-height:75px;
+
+}
+
+.container7
+{
+min-height:75px;
+
+}
+
+.container8
+{
+min-height:300px;
+background-color:#303030;
+text-align:center;
+}
+
+.hello
+{
+margin-top:15px;
+min-width:100%;
+min-height:75px;
+background-color:#0fa5bd;
+padding-top:10px;
+text-align:center;
+}
+
+.hello:hover
+{
+margin-top:15px;
+min-width:100%;
+min-height:75px;
+background-color:#444;
+padding-top:10px;
+text-align:center;
+}
+
+.rowgrey
+{
+background-color:#303030;
+}
+		/*text n shizz*/
+		
+		
+		
+ul
+{
+list-style-type:none;
+margin-left:0px;
+
+}
+
+a:link {color:#fff;text-decoration:none;}      /* unvisited link */
+a:visited {color:#fff;text-decoration:none;}  /* visited link */
+a:hover {color:#fff;text-decoration:none;}  /* mouse over link */
+a:active {color:#fff;text-decoration:none;}  /* selected link */
+
+.image
+{
+
+
+
+}
+.imagecont
+{
+min-height:353px;
+background-color:#666;
+text-align:center;
+}
+
+.imagecont:hover
+{
+min-height:350px;
+background-color:#666;
+border-style:solid;
+border-color:#0fa5bd;
+border-width:0px 0px 3px 0px;
+}
+.link:hover
+{
+background-color:#666;
+border-style:solid;
+border-color:#0fa5bd;
+border-width:0px 0px 3px 0px;
+}
+
+
+.link
+{
+min-width:98px;
+min-height:75px;
+text-align:center;
+padding:35px 10px 0px 10px;
+border-style:solid;
+border-color:transparent;
+border-width:0px 0px 3px 0px;
+}
+
+
+h2
+{
+padding-top:50px;
+padding-bottom:0px;
+margin:0px;
+
+}
+.down
+{
+padding-top:40px;
+padding-bottom:0px;
+margin:0px;
+display:none;
+}
+
+hr
+{
+max-width:1140px;
+color:#fff;
+padding:0px;
+margin-top:0px;
+}
+.text
+{
+color:#A4A1A1;
+text-align:justify;
 }
